Add event command and implement graphql client

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ node_modules
 initRanks.js
 *.png
 
+.tmp.driveupload
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
