--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
     "logging": "^3.3.0",
+    "random-words": "^2.0.0",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4",
     "timers-promises": "^1.0.1",
