--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.2",
     "axios": "^1.2.2",
+    "cron": "^3.1.6",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "graphql": "^16.8.0",
